@@ -4,6 +4,7 @@ version ?.??.?? (????-??-??):
 
   - added support for DSN and MDN in lms-notify.php script [chilan]
   - smarty installation is provided by composer from now [chilan]
+  - added support for sms notifications in timetable type [chilan]
 
 version 1.11.20 (2016-04-19):
 
